--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "nodemon": "1.2.1",
     "passport": "0.2.1",
     "passport-local": "1.0.0",
-    "connect-mongostore" : "0.1.4"
+    "connect-mongostore": "0.1.4"
+  },
+  "devDependencies": {
+    "should": "^6.0.1",
+    "supertest": "^0.15.0"
   }
 }
